--- a/tasks.config.json
+++ b/tasks.config.json
@@ -6,7 +6,7 @@
     "sourceOfComponents": "Server",
     "devBuild": false,
     "serverType": "infinity",
-    "server": "https://localhost:1080/prweb",
+    "server": "https://u50tlpnd.pegace.net/prweb",
     "clientId": "10095186356008396159",
     "clientSecret_comment": "Needed only when using 'passwordCreds' or 'clientCreds' grantType",
     "clientSecret": "",
@@ -25,7 +25,7 @@
     "questions_askAlways": "",
     "questions_askNever": "",
     "questions_askOnce": "server,authService",
-    "questions_askedOnce": ""
+    "questions_askedOnce": "server,authService"
   },
   "component": {
     "library": "Extensions",
